fixed bug with overflowing text boxes

--- a/src/components/viewWorkout/BasicButton.scss
+++ b/src/components/viewWorkout/BasicButton.scss
@@ -27,5 +27,6 @@
 .button-text {
     margin: 0px;
     font-size: 18px;
+    text-transform: capitalize;
     @include font
 }
